@@ -80,7 +80,4 @@ kotlin {
 
 tasks.withType<Test> {
     useJUnitPlatform()
-//    jvmArgs = listOf(
-//        "-XX:+EnableDynamicAgentLoading",
-//    )
 }
